# sploit

./: .gitignore  CONTRIBUTING  Dockerfile  README.txt  __init__.py  docker-entry.sh  pyproject.toml  setup.py  sploit.py  sploitconfig.py  sploitlog.py  sploitpipe  sploitpipe.sh  sploitrunner.py  sploitutil.py
hooks/: bake_version.py
sploit/: __init__.py  __main__.py  arch.py  comm.py  log.py  main.py  mem.py  payload.py  symtbl.py  until.py  util.py
sploit/builder/: __init__.py  gadhint.py  payload.py  rop.py
sploit/rev/: __init__.py  elf.py  gadget.py  ldd.py  r2.py
