[project]
name = "sploit"
description = "sploit is a process interaction automation tool with software exploitation focused utilities."
readme = "README.txt"
requires-python = ">=3.9"
license = "Unlicense"
license-files.paths = ["UNLICENSE"]
authors = [
    {name="dusoleil",email="howcansocksbereal@gmail.com"},
    {name="Malfurious",email="m@lfurio.us"},
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/dusoleil/sploit"

[project.scripts]
sploit = "sploit.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "code"
path = "sploit/__init__.py"
search-paths = ["."]
expression = "__version__"

[tool.hatch.build.hooks.custom]
path = "hooks/bake_version.py"
